# llmfit

./: AGENTS.md  Cargo.toml  Makefile  README.md
.github/workflows/: release.yml
data/: hf_models.json
llmfit-core/: Cargo.toml
llmfit-core/data/: hf_models.json
llmfit-core/src/: fit.rs  hardware.rs  lib.rs
llmfit-desktop/: Cargo.toml  tauri.conf.json
llmfit-tui/: Cargo.toml
llmfit-tui/src/: display.rs  main.rs  tui_app.rs  tui_ui.rs
scripts/: scrape_hf_models.py
src/: display.rs  fit.rs  hardware.rs  main.rs  models.rs  providers.rs  tui_app.rs  tui_events.rs  tui_ui.rs
