[package]
name = "llmfit-core"
version.workspace = true
edition = "2024"
authors = ["axjns"]
description = "Core library for llmfit — hardware detection, model fitting, and provider integration"
license = "MIT"
repository = "https://github.com/AlexsJones/llmfit"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.30"
ureq = { version = "2.9", features = ["json"] }
